--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations: classpath:mapper/*Mapper.xml
 mybatis.type-aliases-package:com.example.demo.bean
 
-spring.redis.host=192.168.65.139
+spring.redis.host=192.168.14.130
 
 logging.level.com.example.demo.dao=debug
+
+spring.rabbitmq.host=192.168.14.130
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
